--- a/all-posts.org
+++ b/all-posts.org
@@ -2632,7 +2632,7 @@ CLOSED: [2024-03-16 Sat 13:14]
 :EXPORT_FILE_NAME: 2024-32af-0903
 :EXPORT_DATE: 2024-03-16
 :EXPORT_HUGO_TAGS:
-:EXPORT_HUGO_CATEGORIES: Wired Eearphone
+:EXPORT_HUGO_CATEGORIES: WiredrEearphone
 :EXPORT_HUGO_LASTMOD:
 :END:
 イアフォンは、それまで常用のSHUREのSE215(無印)のコネクター部分が壊れた上に、
