--- a/all-posts.org
+++ b/all-posts.org
@@ -2676,5 +2676,43 @@ Apple AirPods Proは落としてシャリシャリしているし[[https://www.a
 :EXPORT_HUGO_CATEGORIES:
 :EXPORT_HUGO_LASTMOD:
 :END:
-* Hugoについて
-* テーマをGithub風のgithub-styleにした
+*** Hugoについて
+*** テーマをGithub風のgithub-styleにした
+
+** DONE 葬送のフリーレン
+CLOSED: [2024-03-23 Sat 10:27]
+:PROPERTIES:
+:EXPORT_FILE_NAME: 2024-3ec3-22af
+:EXPORT_DATE:
+:EXPORT_HUGO_TAGS:
+:EXPORT_HUGO_CATEGORIES:
+:EXPORT_HUGO_LASTMOD:
+:END:
+葬送のフリーレンは、日本の漫画、テレビアニメ化されたものが2023.11-2024.03に放映された。
+漫画の方は連載中。
+
+最初は訳がわからなかったけど、いやぁ面白い作品だ。
+
+*** [[https://ja.wikipedia.org/wiki/葬送のフリーレン][Wikipediaにある簡単なあらすじ]]
+
+魔王討伐の偉業を成し遂げ王都に凱旋した勇者ヒンメル、僧侶ハイター、戦士アイゼン、魔法使いフリーレンら勇者パーティー4人は、10年間もの旅路を振り返り感慨にふけっていたが、1000年は軽く生きる長命種のエルフであるフリーレンにとって、その旅はきわめて短いものであった。そして、50年に一度降るという「半世紀（エーラ）流星」を見た4人は、次回もそれを見る約束を交わしてパーティーを解散する。
+
+それから50年後、すっかり年老いたヒンメルと再会したフリーレンは、ハイターやアイゼンとも連れ立って再び流星群を観賞する。まもなくヒンメルは亡くなるが、彼の葬儀でフリーレンは自身がヒンメルについて何も知らず、知ろうともしなかったことに気付いて涙する。その悲しみに困惑したフリーレンは、人間を知るためと魔法収集のために旅に出る。
+
+さらに20年後、フリーレンはもうひとりの仲間であったハイターを訪ねる。ヒンメルと同じく老い先短い身であったハイターは、魔導書の解読と戦災孤児の少女フェルンを弟子にすることを依頼。その4年後に魔導書の解読を終えたフリーレンと、一人前の魔法使いに成長したフェルンは、ハイターの最期を看取ったあとに諸国をめぐる旅に出る。
+
+その後フリーレンたちは、最後に訪ねた仲間であるアイゼンの助力を受けて、フリーレンの師匠にして伝説の大魔法使いフランメの手記を入手。その手記には、かつての魔王城があった大陸北端の地エンデにあるという、死者の魂と対話できる場所・オレオールの存在が記されていた。オレオールで亡きヒンメルと再会するという新たな目的ができたフリーレンは、アイゼンの弟子である少年戦士シュタルクや、行方不明の親友との再会を望む僧侶ザインという新たな仲間たちを加えて北方を目指す。
+
+*** アニメ最終話
+
+アニメの方は終わった。次があるのだろうか🤔
+
+オイサーストで開催された一級魔法使いの試験で出会った不合格の受験生との別れの後、フェルンとシュタルクから、さっぱりした別れだといわれた。フリーレンの遠い目の先には勇者一行のヒンメルの言葉を思い出していた、このシーンがアニメでは言いたいことかな。
+
+またあったときに恥ずかしいからね。
+
+[[https://watch.amazon.co.jp/detail?gti=amzn1.dv.gti.c74f9d3b-74ad-4853-b591-742901681ec0&territory=JP&ref_=share_mac_season&r=web][アニメ Eps.28]]
+
+#+begin_export hugo
+{{< twitter user="ac1965" id="1771335505801826603" >}}
+#+end_export
