--- a/all-posts.org
+++ b/all-posts.org
@@ -2651,8 +2651,8 @@ CLOSED: [2024-03-16 Sat 13:14]
 :PROPERTIES:
 :EXPORT_FILE_NAME: 2024-32af-0903
 :EXPORT_DATE: 2024-03-16
-:EXPORT_HUGO_TAGS:
-:EXPORT_HUGO_CATEGORIES: WiredrEearphone
+:EXPORT_HUGO_TAGS: WiredrEearphone CCZc
+:EXPORT_HUGO_CATEGORIES:
 :EXPORT_HUGO_LASTMOD:
 :END:
 イアフォンは、それまで常用のSHUREのSE215(無印)のコネクター部分が壊れた上に、
@@ -2684,7 +2684,7 @@ CLOSED: [2024-03-23 Sat 10:27]
 :PROPERTIES:
 :EXPORT_FILE_NAME: 2024-3ec3-22af
 :EXPORT_DATE:
-:EXPORT_HUGO_TAGS:
+:EXPORT_HUGO_TAGS: anime Frieren
 :EXPORT_HUGO_CATEGORIES:
 :EXPORT_HUGO_LASTMOD:
 :END:
